--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         More Detail
     </h3>
     <h4>Try to create git branch feature1</h4>
+    <h3>This is another feature</h3>
 </body>
 </html>
