--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     </h3>
     <h4>Try to create git branch feature1</h4>
     <h3>This is another feature</h3>
+    <h3>This is another feature test 2</h3>
 </body>
 </html>
