--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <h3>This is another feature test 2</h3>
     <h3>Test of feature2</h3>
     <h3>To make sure! Test2 of feature 2</h3>
+    <h4>Test Branch Feature3</h4>
 </body>
 </html>
